[tool.poetry]
name = "roadbook_converter"
version = "0.1.0"
description = ""
authors = ["DEWAS Albert <b0b_ChoK@yahoo.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pdf2image = "^1.16.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
